# rockchip_package

hello_world/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  main.c  subst  test  test.in
hello_world/autom4te.cache/: output.0  requests  traces.0
